# cnn_vis

./: README.md  model.pt  pyproject.toml
src/cnn_vis/: infer.py  sample.py  train.py
src/cnn_vis/archs/: simple_cnn.py  simple_decode_cnn.py
src/cnn_vis/models/: exps.py
